RESOLVED FIXED159766
Fix the !ENABLE(CSS_IMAGE_SET) build
https://bugs.webkit.org/show_bug.cgi?id=159766
Summary Fix the !ENABLE(CSS_IMAGE_SET) build
Csaba Osztrogonác
Reported 2016-07-14 08:25:33 PDT
../../Source/WebCore/css/CSSParser.cpp:1879:13: error: 'bool WebCore::isImageSetFunctionValue(const WebCore::CSSParserValue&)' defined but not used [-Werror=unused-function] cc1plus: all warnings being treated as errors
Attachments
Patch (1.35 KB, patch)
2016-07-14 08:26 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-07-14 08:26:38 PDT
WebKit Commit Bot
Comment 2 2016-07-14 12:29:18 PDT
Comment on attachment 283644 [details] Patch Clearing flags on attachment: 283644 Committed r203232: <http://trac.webkit.org/changeset/203232>
WebKit Commit Bot
Comment 3 2016-07-14 12:29:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.