Fix the !ENABLE(CSS_IMAGE_SET) build https://bugs.webkit.org/show_bug.cgi?id=159766

Reviewed by Alex Christensen.

* css/CSSParser.cpp:


Canonical link: https://commits.webkit.org/177922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203232 268f45cc-cd09-0410-ab3c-d52691b4dbfc